--- a/backend/views/components/header.ejs
+++ b/backend/views/components/header.ejs
@@ -19,13 +19,14 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-primary" id="navbar">
         <div class="container-fluid">
-
+          <img src="https://img2.freepng.fr/20180404/hzq/kisspng-dr-ruparelia-s-sushrusha-ayurved-multispeciality-hospital-5ac48f9f7f2a03.6494171315228312635209.jpg" class="navbar-brand" alt="">
+          <!--<i class="fa-regular fa-hospital navbar-brand"></i>-->
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <i class="fa-regular fa-hospital navbar-brand"></i>
+            
             <div class="navbar-nav">
               
               
@@ -71,7 +72,7 @@
               <i class="fa-solid fa-user-doctor sidebar-icon"></i>
              </td>
              <td>
-              <a href="#" class="nav-link sidebar-link d-flex align-items-center align-content-center">
+              <a href="/api/v1/doctors" class="nav-link sidebar-link d-flex align-items-center align-content-center">
               
                 Doctors
               </a>
@@ -83,7 +84,7 @@
               <i class="fa-solid fa-bed sidebar-icon"></i>
              </td>
              <td>
-              <a href="#" class="nav-link sidebar-link">
+              <a href="/api/v1/patients" class="nav-link sidebar-link">
               
                 Patients
               </a>
@@ -94,7 +95,7 @@
               <i class="fa-solid fa-user-nurse sidebar-icon"></i>
              </td>
              <td>
-              <a href="#" class="nav-link sidebar-link">
+              <a href="/api/v1/employees" class="nav-link sidebar-link">
               
                 Employees
               </a>
