--- a/backend/views/doctors.ejs
+++ b/backend/views/doctors.ejs
@@ -18,36 +18,33 @@
                     <div class="thumb-lg member-thumb mx-auto"><img src="<%= item.avatar%> z"class="rounded-circle img-thumbnail" alt="profile-image"></div>
                     <div class="">
                         <h4><%=item.fName%> <%=item.lName%></h4>
-                        <p class="text-muted">@Founder <span>| </span><span><a href="#" class="text-pink">websitename.com</a></span></p>
+                        <p class="text-muted">@Speciality <span>| </span><span><%=item.speciality%></span></p>
                     </div>
-                    <ul class="social-links list-inline">
-                        <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                        <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a title="" data-placement="top" data-toggle="tooltip" class="tooltips" href="" data-original-title="Skype"><i class="fa fa-skype"></i></a></li>
-                    </ul>
+                    
                     <button type="button" class="btn btn-primary mt-3 btn-rounded waves-effect w-md waves-light">Message Now</button>
                     <div class="mt-4">
                         <div class="row">
                             <div class="col-4">
                                 <div class="mt-3">
-                                    <h4><%=item.speciality%></h4>
-                                    <p class="mb-0 text-muted">Speciality</p>
+                                    <h4><%=item.salary%></h4>
+                                    <p class="mb-0 text-muted">Salary</p>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="mt-3">
-                                    <h4>6952</h4>
-                                    <p class="mb-0 text-muted">Income amounts</p>
+                                    <h4><%=item.dateOfBirth.getDate()+1%>-<%=item.dateOfBirth.getMonth()+1%>-<%=item.dateOfBirth.getFullYear()%></h4>
+                                    <p class="mb-0 text-muted">Date of birth</p>
                                 </div>
                             </div>
                             <div class="col-4">
                                 <div class="mt-3">
-                                    <h4>1125</h4>
-                                    <p class="mb-0 text-muted">Total Transactions</p>
+                                    <h4><%=item.sex%></h4>
+                                    <p class="mb-0 text-muted">Sex</p>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div><br>
+                    <a href="/api/v1/doctor/delete?id=<%=item._id%>"class="btn btn-primary btn-danger" >Delete</a>
                 </div>
             </div>
         </div>
