--- a/backend/views/patients.ejs
+++ b/backend/views/patients.ejs
@@ -15,7 +15,7 @@
         <div class="member-card pt-2 pb-2">
             <!--<div class="thumb-lg member-thumb mx-auto"><img src="<%= item.avatar%> z"class="rounded-circle img-thumbnail" alt="profile-image"></div>-->
             <div class="">
-                <h4><%=item.fName%> <%=item.lName%></h4>
+                <h4><b><%=item.fName%> <%=item.lName%></b></h4>
                 <!--<p class="text-muted">@Speciality <span>| </span><span><%=item.speciality%></span></p>-->
             </div>
 
@@ -25,13 +25,15 @@
                 <div class="row">
                     <div class="col-4">
                         <div class="mt-3">
-                            <!--<h4><%=item.salary%></h4>
-                                    <p class="mb-0 text-muted">Salary</p>-->
+                            <h4><%=item.dateOfBirth.getDate()+1%>-<%=item.dateOfBirth.getMonth()+1%>-<%=item.dateOfBirth.getFullYear()%></h4>                           <p class="mb-0 text-muted">Date of birth</p>
+
                         </div>
                     </div>
                     <div class="col-4">
                         <div class="mt-3">
-                            <h4><%=item.dateOfBirth.getDate()+1%>-<%=item.dateOfBirth.getMonth()+1%>-<%=item.dateOfBirth.getFullYear()%></h4>                           <p class="mb-0 text-muted">Date of birth</p>
+                            <h4><%=item.room%></h4>
+                            <p class="mb-0 text-muted">Room</p>
+
                         </div>
                     </div>
                     <div class="col-4">
