--- a/backend/views/doctors.ejs
+++ b/backend/views/doctors.ejs
@@ -17,7 +17,7 @@
                 <div class="member-card pt-2 pb-2">
                     <div class="thumb-lg member-thumb mx-auto"><img src="<%= item.avatar%> z"class="rounded-circle img-thumbnail" alt="profile-image"></div>
                     <div class="">
-                        <h4><%=item.fName%> <%=item.lName%></h4>
+                        <h4><b><%=item.fName%> <%=item.lName%></b></h4>
                         <p class="text-muted">@Speciality <span>| </span><span><%=item.speciality%></span></p>
                     </div>
                     
