--- a/backend/views/employees.ejs
+++ b/backend/views/employees.ejs
@@ -1,15 +1,15 @@
-<%- include ("./components/header");%>
+<%- include('components/header');%>
 <div class="filter-form">
-    <form action="/api/v1/patient" method="get">
+    <form action="/api/v1/employee" method="get">
 
         <input type="text" placeholder="Enter First Name" name="fName">
         <input type="text" placeholder="Enter Last Name" name="lName">
         <input type="date" name="dateOfBirth">
         <button id="form-btn" type="submit">Search</button>
     </form>
-    <a id="add-button" href="/api/v1/patient/new">+</a>
+    <a id="add-button" href="/api/v1/employee/new">+</a>
 </div>
-<% patients.forEach((item)=>{%>
+<% employees.forEach((item)=>{%>
     <div class="col-lg-4 col-md-4">
         <div class="text-center card-box">
             <div class="member-card pt-2 pb-2">
@@ -31,8 +31,8 @@
                         </div>
                         <div class="col-4">
                             <div class="mt-3">
-                                <h4><%=item.room%></h4>
-                                <p class="mb-0 text-muted">Room</p>
+                                <h4><%=item.phoneNumber%></h4>
+                                <p class="mb-0 text-muted">Phone Number</p>
 
                             </div>
                         </div>
@@ -44,11 +44,11 @@
                         </div>
                     </div>
                 </div><br>
-                <a href="/api/v1/patient/delete?id=<%=item._id%>" class="btn btn-primary btn-danger">Delete</a>
+                <a href="/api/v1/employee/delete?id=<%=item._id%>" class="btn btn-primary btn-danger">Delete</a>
             </div>
         </div>
     </div>
 <%});%>
 
 </table>
-<%- include ("./components/footer");%>
+<%- include('components/footer');%>
