--- a/backend/views/components/header.ejs
+++ b/backend/views/components/header.ejs
@@ -106,7 +106,7 @@
               <i class="fa-solid fa-calendar sidebar-icon"></i>
             </td>
             <td>
-              <a href="#" class="nav-link sidebar-link">
+              <a href="/api/v1/appointments" class="nav-link sidebar-link">
               
                 Appointments
               </a>
