--- a/backend/views/components/header.ejs
+++ b/backend/views/components/header.ejs
@@ -117,7 +117,7 @@
               <i class="fa-solid fa-house-medical sidebar-icon"></i>
              </td>
              <td>
-              <a href="#" class="nav-link sidebar-link">
+              <a href="/api/v1/rooms" class="nav-link sidebar-link">
               
                 Rooms
               </a>
