--- a/backend/public/css/header.css
+++ b/backend/public/css/header.css
@@ -1,6 +1,4 @@
-*{
-    /*overflow-x: hidden;*/
-}
+
 body{
     height: 100%;
     background-color:#0d6efd ;
@@ -81,7 +79,7 @@ i.admin{
    
     margin-top: 20px;
     margin-left:20px;
-
+    overflow: hidden;
 
 }
 .content table{
@@ -284,4 +282,74 @@ input{
 .cards-text a{
     text-decoration: none;
     color: white;
+}
+.without_ampm::-webkit-datetime-edit-ampm-field {
+    display: none;
+}
+table{
+    position: relative;
+    border-collapse: collapse;
+}
+.appointments-table{
+    margin: auto;
+    margin-top: 0;
+    box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 100%;
+    
+}
+.appointments-table th , .appointments-table td {
+    width: fit-content;
+    padding :5px;
+    background-color: white;
+    text-align: center;
+    
+    
+}
+.appointments-container{
+   
+    position: relative;
+    
+    height: 450px;
+    overflow-y: scroll;
+}
+.appointments-table th {
+    font-size: 18px;
+    font-weight: bold;
+    background-color:#FFFF8F;
+}
+.appointments-table td {
+    font-family:'Open Sans';
+    background-color: #797979;
+    color: white;
+    font-weight: bold;
+}
+
+th{
+    position: sticky;
+    top:0;
+    box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
+}
+.rooms-container{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+}
+.rooms-table{
+    width: 80%;
+    border: none !important;
+    border-spacing: 2px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
+}
+.rooms-table th {
+    text-align: center;
+    font-size: 20px;
+    border: none;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    color:white;
+    
+}
+.rooms-table th:hover{
+    background-color: #8ac926;
+    
 }
