--- a/backend/public/css/header.css
+++ b/backend/public/css/header.css
@@ -1,21 +1,28 @@
-
-body{
-    height: 100%;
-    background-color:#0d6efd ;
-   
+*::first-letter {
+    text-transform: capitalize;
 }
-nav{
+
+body {
+    height: 100%;
+    background-color: #0d6efd;
+
+}
+
+nav {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-family: 'Open Sans', sans-serif;
+    margin-bottom: 30px;
 
 }
-i{
+
+i {
     color: white;
     scale: 2;
     margin: 15px;
     z-index: 5;
-  
+
 }
+
 .sticky {
     position: fixed;
     top: 0;
@@ -23,71 +30,84 @@ i{
     z-index: 5;
 }
 
-.nav-link{
+.nav-link {
     color: white;
     font-weight: 500;
     font-size: 18px;
     margin: 5px;
 }
-.navbar-nav{
+
+.navbar-nav {
     margin-left: auto;
     margin-right: 50px;
 }
-.side-bar{
-    height:100%;
+
+.side-bar {
+    height: 100%;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     font-family: 'Open Sans', sans-serif;
     border-radius: 25px;
 
 }
-.admin{
+
+.admin {
     display: flex;
     align-items: center;
 }
-.sidebar-link{
-    font-weight:600
+
+.sidebar-link {
+    font-weight: 600
 }
-.sidebar-link:hover{
+
+.sidebar-link:hover {
     color: #8ac926;
 }
-.sidebar-icon{
-    scale:1.3;
+
+.sidebar-icon {
+    scale: 1.3;
 }
-hr{
+
+hr {
     color: white;
 }
-tr{
+
+tr {
     height: 70px;
 }
-    
-i.admin{
-    color:#8ac926;
-    scale:1.4;
+
+i.admin {
+    color: #8ac926;
+    scale: 1.4;
 }
-.main-content{
+
+.main-content {
     display: flex;
     flex-direction: row;
     margin-top: 20px;
     padding: 5px 5px 5px 10px;
     overflow-x: hidden;
-    
-    
+
+
 
 }
+
 .content {
-    
-   
+
+
     margin-top: 20px;
-    margin-left:20px;
+    margin-left: 20px;
     overflow: hidden;
 
 }
-.content table{
+
+.content table {
     border: 2px solid;
     border-collapse: collapse;
 }
-.content th ,.content td{
-    padding:10px;
+
+.content th,
+.content td {
+    padding: 10px;
     border: 1px solid;
 }
 
@@ -115,10 +135,12 @@ i.admin{
     color: #797979;
     border: 2px solid #797979
 }
+
 .thumb-lg {
     height: 88px;
     width: 88px;
 }
+
 .img-thumbnail {
     padding: .25rem;
     background-color: #fff;
@@ -128,68 +150,79 @@ i.admin{
     height: 100%;
     object-fit: cover;
 }
+
 .text-pink {
-    color: #ff679b!important;
+    color: #ff679b !important;
 }
+
 .btn-rounded {
     border-radius: 2em;
 }
+
 .text-muted {
-    color: #98a6ad!important;
+    color: #98a6ad !important;
 }
+
 h4 {
     line-height: 22px;
     font-size: 18px;
 }
-.row{
+
+.row {
     display: flex;
     flex-wrap: wrap;
-    width:100%;
+    width: 100%;
 }
-.main-content2{
-    padding:16px;
-    margin-top: 20px; 
+
+.main-content2 {
+    padding: 16px;
+    margin-top: 20px;
     text-align: center;
 }
-.sticky + .main-content {
+
+.sticky+.main-content {
     padding-top: 70px;
-  }
-.filter-form{
+}
+
+.filter-form {
     display: flex;
     justify-content: space-evenly;
     margin: 20px;
     flex-wrap: wrap;
 }
-input{
-    padding:5px;
-    margin:2px;
-    background-color:#c3e8ff;
+
+input {
+    padding: 5px;
+    margin: 2px;
+    background-color: #c3e8ff;
     color: black;
     border: none;
     border-radius: 5px;
     /*box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;*/
-    
 
-    
+
+
 }
-#form-btn{
+
+#form-btn {
     padding: 10px 20px 10px 20px;
-    margin :2px;
+    margin: 2px;
     background-color: #0d6ef0;
     border: none;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 1px 4px;
 }
-#add-button{
+
+#add-button {
     display: flex;
     border: none;
     align-items: center;
     justify-content: center;
     text-decoration: none;
     color: black;
-    border-radius:10px ;
+    border-radius: 10px;
     width: 60px;
-    height:48px;
+    height: 48px;
     font-weight: bold;
     background-color: #8ac926;
     box-shadow: rgba(0, 0, 0, 0.35) 2px 2px 7px;
@@ -197,64 +230,84 @@ input{
 
 .container {
     max-width: 960px;
-  }
-  
-.border-top { border-top: 1px solid #e5e5e5; }
-.border-bottom { border-bottom: 1px solid #e5e5e5; }
-.border-top-gray { border-top-color: #adb5bd; }
-  
-.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
-  
-.lh-condensed { line-height: 1.25; }
-.new-doctor{
+}
+
+.border-top {
+    border-top: 1px solid #e5e5e5;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.border-top-gray {
+    border-top-color: #adb5bd;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+.lh-condensed {
+    line-height: 1.25;
+}
+
+.new-doctor {
     margin-left: auto;
     margin-right: auto;
 }
+
 .needs-validation label {
     font-weight: bold;
 }
-.needs-validation{
+
+.needs-validation {
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin:5px;
+    margin: 5px;
     padding: 10px;
 }
-.title{
+
+.title {
     color: white;
-    font-weight:bold;
+    font-weight: bold;
 }
-.col-4{
-    padding:0;
+
+.col-4 {
+    padding: 0;
 }
-.mt-4{
+
+.mt-4 {
     display: flex;
     justify-content: center;
 }
-.navbar-brand{
-    width: 100px;
+
+.navbar-brand {
+    width: 65px;
     mix-blend-mode: multiply;
-    margin-left:25px;
+    margin-left: 80px;
 }
-.cards{
-    width : 45%;
-    margin : 10px;
+
+.cards {
+    width: 45%;
+    margin: 10px;
     background-color: #8ac926;
-    box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 40px;
     display: flex;
     justify-content: space-between;
-    height:280px;
+    height: 280px;
 }
+
 .yellow {
     background-color: #FFFF8F;
     color: black;
 }
-.red{
-    background-color:  #FF5733 ;
-}
-.cards-text , .cards-img-content{
+
+.cards-text,
+.cards-img-content {
     display: flex;
-    width:50%;
-    padding:10px;
+    width: 50%;
+    padding: 10px;
     color: white;
     font-weight: 900;
     font-size: 1.4rem;
@@ -262,94 +315,149 @@ input{
     height: 100%;
 
 }
-.cards-img-content{
+
+.cards-img-content {
     justify-content: space-between;
     font-size: 1.1rem;
 }
-.cards-img{
-    scale:5;
+
+.cards-img {
+    scale: 5;
     position: relative;
-    bottom:70px;
-    right:15px;
-    
+    bottom: 70px;
+    right: 15px;
+
 }
+
 .cards-infos {
     font-size: 2rem;
     font-weight: bold;
     position: relative;
-    top:15px;
+    top: 15px;
 }
-.cards-text a{
+
+.cards-text a {
     text-decoration: none;
     color: white;
 }
+
 .without_ampm::-webkit-datetime-edit-ampm-field {
     display: none;
 }
-table{
+
+table {
     position: relative;
     border-collapse: collapse;
 }
-.appointments-table{
+
+.appointments-table {
     margin: auto;
     margin-top: 0;
-    box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     width: 100%;
-    
+
 }
-.appointments-table th , .appointments-table td {
+
+.appointments-table th,
+.appointments-table td {
     width: fit-content;
-    padding :5px;
+    padding: 5px;
     background-color: white;
     text-align: center;
-    
-    
+
+
 }
-.appointments-container{
-   
+
+.appointments-container {
+
     position: relative;
-    
+
     height: 450px;
     overflow-y: scroll;
 }
+
 .appointments-table th {
     font-size: 18px;
     font-weight: bold;
-    background-color:#FFFF8F;
+    background-color: #FFFF8F;
 }
+
 .appointments-table td {
-    font-family:'Open Sans';
+    font-family: 'Open Sans';
     background-color: #797979;
     color: white;
     font-weight: bold;
 }
 
-th{
+th {
     position: sticky;
-    top:0;
+    top: 0;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
 }
-.rooms-container{
+
+.rooms-container {
     margin: auto;
     display: flex;
     justify-content: center;
 }
-.rooms-table{
+
+.rooms-table {
     width: 80%;
     border: none !important;
     border-spacing: 2px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 
 }
+
 .rooms-table th {
     text-align: center;
-    font-size: 20px;
     border: none;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    color:white;
-    
+    color: white;
+
 }
-.rooms-table th:hover{
+
+.red {
+    background-color: #FF5733;
+}
+
+.green {
     background-color: #8ac926;
-    
+}
+
+.rooms-table th a {
+    text-decoration: none;
+    color: white;
+    font-size: 22px;
+}
+
+.card-room {
+    padding: 20px;
+    width: 450px;
+    height: 450px;
+    margin: auto;
+    margin-top: 45px;
+    text-align: center;
+    background-color: white;
+    border-radius: 25px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+
+}
+
+.card-room-header {
+    font-weight: 800;
+    font-family: 'Open Sans', 'sans serif';
+}
+
+.grey {
+    display: flex;
+    flex-direction: column;
+    background-color: #797979;
+    color: white;
+    border-radius: 25px;
+    padding: 15px;
+    margin: auto;
+    font-weight: bold;
+    height: 60%;
+    justify-content: center;
 }
