--- a/backend/views/components/header2.ejs
+++ b/backend/views/components/header2.ejs
@@ -15,6 +15,8 @@
     <script src="https://kit.fontawesome.com/c30330ab46.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/dashboard.css">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-primary" id="navbar">
